--- a/.github/workflows/FirstCppRunner.yml
+++ b/.github/workflows/FirstCppRunner.yml
@@ -19,7 +19,7 @@ jobs:
       
     - name: Build
       working-directory: ${{runner.workspace}}/build
-      run: cmake --build .
+      run: cmake --build test.cpp
       
     - name: Test
       working-directory: ${{runner.workspace}}/build
