added csv parser and data class for holidays, and created class for plan generating

--- a/NursesWorkSchedule/CMakeLists.txt
+++ b/NursesWorkSchedule/CMakeLists.txt
@@ -20,10 +20,18 @@ add_executable(
     mainio.cpp
     shift.h
     shift.cpp
-    main.cpp
-    csvnursesparser.h csvnursesparser.cpp
+    csvnursesparser.h
+    csvnursesparser.cpp
     filewriter.h
-    csvfilewriter.h csvfilewriter.cpp
+    csvfilewriter.h
+    csvfilewriter.cpp
+    schedulecreator.h
+    schedulecreator.cpp
+    csvholidaysparser.h
+    csvholidaysparser.cpp
+    holiday.h
+    holiday.cpp
+    main.cpp
 )
 
 include(GNUInstallDirs)
