--- a/.github/workflows/FirstCppRunner.yml
+++ b/.github/workflows/FirstCppRunner.yml
@@ -15,14 +15,14 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Configure CMake
-      run: cmake -S $GITHUB_WORKSPACE/NursesWorkSchedule -B ${{runner.workspace}}/build
+      run: cmake -S $GITHUB_WORKSPACE/NursesWorkSchedule -B ${{runner.workspace}}
       
     - name: Build
-      working-directory: ${{runner.workspace}}/build
+      working-directory: ${{runner.workspace}}
       run: cmake --build .
       
     - name: Test
-      working-directory: ${{runner.workspace}}/build
+      working-directory: ${{runner.workspace}}
       run: GTEST_OUTPUT=xml:test-results/ GTEST_COLOR=1 ctest -V
       
     - name: Upload test results
