Edit class filewriter and csvfilewriter. Add holidayParserTest and staffParserTest. Edit Tests  FirstReaderTest and FirstFileReaderTest

--- a/NursesWorkSchedule/CMakeLists.txt
+++ b/NursesWorkSchedule/CMakeLists.txt
@@ -77,6 +77,8 @@ add_executable(
     currentDateTest.cpp
     fileWriterFileReaderTest.cpp
     fileReaderTest.cpp
+    holidayParserTest.cpp
+    staffParserTest.cpp
 )
 
 include(GNUInstallDirs)
