--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -22,7 +22,8 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       run: GTEST_OUTPUT=xml:test-results/ GTEST_COLOR=1 ctest -V
       
-    - name: Generate a code coverage report
+    - name: Generate and send a code coverage report to Coveralls
       uses: threeal/gcovr-action@v1.0.0
       with:
-        gcov-executable: llvm-cov gcov
+        coveralls-send: true
+        github-token: ${{ secrets.GITHUB_TOKEN }}
