--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -14,11 +14,9 @@ jobs:
     - name: Configure CMake
       run: cmake -S $GITHUB_WORKSPACE/NursesWorkSchedule -B ${{runner.workspace}}/build
       
-    - name: Build and test this project
-      run: |
-          cmake . -B build .
-          cmake --build build .
-          ctest --test-dir build .
+    - name: Build
+      working-directory: ${{runner.workspace}}/build
+      run: cmake --build .
       
     - name: Test
       working-directory: ${{runner.workspace}}/build
