--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -15,6 +15,7 @@ jobs:
       run: cmake -S $GITHUB_WORKSPACE/NursesWorkSchedule -B ${{runner.workspace}}/build
       
     - name: Build and test this project
+      working-directory: ${{runner.workspace}}/build
       run: |
         cmake . -B build .
         cmake --build build .
