--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -8,7 +8,11 @@ jobs:
       - name: Check out this repository
         uses: actions/checkout@v4.1.0
         
+      - name: Configure CMake
+        run: cmake -S $GITHUB_WORKSPACE/NursesWorkSchedule -B ${{runner.workspace}}/build
+      
       - name: Build and test this project
+        working-directory: ${{runner.workspace}}/build
         run: |
           cmake . -B build -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
           cmake --build build
