--- a/NursesWorkSchedule/CMakeLists.txt
+++ b/NursesWorkSchedule/CMakeLists.txt
@@ -5,10 +5,10 @@ project(NursesWorkSchedule LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-#option(CodeCoverage "CodeCoverage" OFF)
-#set(CMAKE_CXX_FLAGS "-std=c++11 -Wno-deprecated-register ${CMAKE_CXX_FLAGS}")
-#set(CMAKE_CXX_FLAGS_DEBUG "-std=c++11 -Wno-deprecated-register -O0 -g -fprofile-arcs -ftest-coverage ${CMAKE_CXX_FLAGS_DEBUG}")
-#set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
+option(CodeCoverage "CodeCoverage" OFF)
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wno-deprecated-register ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS_DEBUG "-std=c++11 -Wno-deprecated-register -O0 -g -fprofile-arcs -ftest-coverage ${CMAKE_CXX_FLAGS_DEBUG}")
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 
 add_executable(
     NursesWorkSchedule
@@ -127,10 +127,10 @@ target_link_libraries(
 
 include(GoogleTest)
 gtest_discover_tests(NursesWorkScheduleTest PRE_TEST)
-#if (CMAKE_BUILD_TYPE MATCHES Debug)
-#if (CodeCoverage MATCHES ON)
-#include(CodeCoverage)
-#setup_target_for_coverage(${PROJECT_NAME}_coverage poptests coverage)
-#setup_target_for_coverage_cobertura(${PROJECT_NAME}_cobertura poptests coverage --gtest_output=xml:coverage.junit.xml)
-#endif()
-#endif()
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+if (CodeCoverage MATCHES ON)
+include(CodeCoverage)
+setup_target_for_coverage(${PROJECT_NAME}_coverage poptests coverage)
+setup_target_for_coverage_cobertura(${PROJECT_NAME}_cobertura poptests coverage --gtest_output=xml:coverage.junit.xml)
+endif()
+endif()
