--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -1,1 +1,35 @@
+name: Code Coverage
 
+on: [push, workflow_dispatch]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Configure CMake
+      run: cmake -S $GITHUB_WORKSPACE/NursesWorkSchedule -B ${{runner.workspace}}/build
+      
+    - name: Build
+      working-directory: ${{runner.workspace}}/build
+      run: cmake --build .
+      
+    - name: Test
+      working-directory: ${{runner.workspace}}/build
+      run: GTEST_OUTPUT=xml:test-results/ GTEST_COLOR=1 ctest -V
+      
+    - name: Code Coverage
+      working-directory: ${{runner.workspace}}/build
+      run:
+        ctest --progress \
+        lcov -c -d . -o main_coverage.info \
+        genhtml main_coverage.info --output-directory out
+    - name: Upload test results
+      uses: actions/upload-artifact@v2
+      if: failure()
+      with:
+        name: test_results_xml
+        path: ${{runner.workspace}}/build/test-results/**/*.xml
