--- a/.github/workflows/FirstCppRunner.yml
+++ b/.github/workflows/FirstCppRunner.yml
@@ -1,5 +1,4 @@
-name: Example test
-
+name: Run all Testes
 on: [push, workflow_dispatch]
 
 jobs:
@@ -21,15 +20,9 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       run: GTEST_OUTPUT=xml:test-results/ GTEST_COLOR=1 ctest -V
       
-    - name: Code Coverage
-      working-directory: ${{runner.workspace}}/build
-      run:
-        ctest --progress \
-        lcov -c -d . -o main_coverage.info \
-        genhtml main_coverage.info --output-directory out
     - name: Upload test results
       uses: actions/upload-artifact@v2
       if: failure()
       with:
         name: test_results_xml
-        path: ${{runner.workspace}}/build/test-results/**/*.xml
+        path: $GITHUB_WORKSPACE/
