--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -22,6 +22,6 @@ jobs:
       run:
         ctest --progress \
         lcov -c -d . -o main_coverage.info \
-        genhtml main_coverage.info ${{runner.workspace}}/build out
+        genhtml main_coverage.info --output-directory out
     - name: Print Code Covergae result
       working-directory: ${{runner.workspace}}/build
