--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -22,7 +22,7 @@ jobs:
       run:
         ctest --progress /
         lcov -c -d . -o main_coverage.info /
-        genhtml main_coverage.info / out
+        genhtml main_coverage.info --output-directory out
     - name: Print Code Covergae result
       working-directory: ${{runner.workspace}}/build
-      run: echo https://github.com/GMM-Works/${{runner.workspace}}/build/index.html
+      run: echo https://github.com/GMM-Works/${{runner.workspace}}/build/--output-directory/index.html
