--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -25,4 +25,4 @@ jobs:
         genhtml main_coverage.info --output-directory out
     - name: Print Code Covergae result
       working-directory: ${{runner.workspace}}/build
-      run: echo https://github.com/GMM-Works/${{runner.workspace}}/build/--output-directory/index.html
+      run: echo https://github.com/GMM-Works/NursesWorkSchedule/blob/CodeCoverage/${{runner.workspace}}/build/--output-directory/index.html
