--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -25,4 +25,4 @@ jobs:
         genhtml main_coverage.info --output-directory out
     - name: Print Code Covergae result
       working-directory: ${{runner.workspace}}/build
-      run: echo  https://htmlpreview.github.io/?${{runner.workspace}}/build
+      run: echo  https://htmlpreview.github.io/?https://github.com/GMM-Works/${{runner.workspace}}/build/out/index.html
